Add new entries

--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -1052,3 +1052,25 @@
   year={2017},
   publisher={Am Soc Cell Biol}
 }
+
+@article{jana2016drosophila,
+  title={Drosophila melanogaster as a model for basal body research},
+  author={Jana, Swadhin Chandra and Bettencourt-Dias, M{\'o}nica and Durand, B{\'e}n{\'e}dicte and Megraw, Timothy L},
+  journal={Cilia},
+  volume={5},
+  number={1},
+  pages={22},
+  year={2016},
+  publisher={BioMed Central}
+}
+
+@article{lattao2017centrioles,
+  title={The Centrioles, Centrosomes, Basal Bodies, and Cilia of Drosophila melanogaster},
+  author={Lattao, Ramona and Kov{\'a}cs, Levente and Glover, David M},
+  journal={Genetics},
+  volume={206},
+  number={1},
+  pages={33--53},
+  year={2017},
+  publisher={Genetics Soc America}
+}
